# cpp-minimal-attribute-engine

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  attribute_engine.hpp
include/: attribute_engine.hpp  attribute_engine.ipp
include/attribute_engine/: attribute_engine.ipp  detail.hpp
patches/: gtest_mingw.patch
testing/unit-tests/: CMakeLists.txt  attribute_engine_test.cpp
tools/: generate-appveyor-yaml.py  generate-travis-yaml.py
